# craft-ai-project

./: .gitignore  Cargo.toml  README.md  got_families.csv
src/: main.rs  visualization.rs
src/lineage/: mod.rs  person.rs
src/lineage/tests/: family_member_api.rs  mod.rs  next_in_line.rs
