[package]
name = "craft-ai-project"
version = "0.1.0"
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = {version = "1.0.111", features = ["derive"]}
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

plotters = "0.2.15"
petgraph = "0.5.1"